src/graduate_work/manifest_app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  app
  template:
    metadata:
      labels:
        app:  app
    spec:
      containers:
      - name: web-spring-boot
        image: ledok/jm_my_web4_spring_boot:0.0.1
        ports:
          - containerPort: 8080
            name: web1
            protocol: TCP
#        volumeMounts:
#          - name: nginx-index
#            mountPath: /usr/share/nginx/html/
##          - name: nginx-conf
##            mountPath: /etc/nginx/
      - name: postgres
        image: postgres:13.3
        ports:
          - containerPort: 5432
            name: web2
            protocol: TCP
      volumes:
        - name: nginx-index
          configMap:
            name: configmap
        - name: nginx-conf
          configMap:
            name: my-nginx-config
        - name: secret-volume
          secret:
            secretName: my-app-secret-tls


---

apiVersion: v1
kind: Service
metadata:
  name: app-db-svc
spec:
  selector:
    app: app
  ports:
    - name: web1
      port: 8080
    - name: web2
      port: 5432
