src/graduate_work/app-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: app
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "node1.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app
            port:
              number: 8080
