src/graduate_work/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /grafana
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  tls:
    - hosts:
      - grafana
      secretName: my-app-secret-tls
